# texture-clear-mnwe

./: Cargo.toml
assets/shaders/: downscale.wgsl
src/: main.rs  tiled_renderer.rs  types.rs
