[package]
name = "tiled_render_experiment"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_prototype_lyon = { git = "https://github.com/colepoirier/bevy_prototype_lyon", branch = "tracking-bevy-main" }
bevy_pancam = { git = "https://github.com/colepoirier/bevy_pancam", branch = "main" }
crossbeam-channel = "0.5.5"
geo = "0.23.0"
csv = "1.1.6"
itertools = "0.10.3"
rand = "0.8.5"

[dependencies.bevy]
git = "https://github.com/bevyengine/bevy"
rev = "e7cd9c1b8629d0d851f74d4d129ec8832457e8f5"
default-features = false
features = ["bevy_winit", "render", "bevy_asset"]

[target.'cfg(unix)'.dependencies.bevy]
git = "https://github.com/bevyengine/bevy"
rev = "e7cd9c1b8629d0d851f74d4d129ec8832457e8f5"
default-features = false
features = [
    "bevy_winit",
    "render",
    "x11",
    "bevy_asset",
    # "dynamic"
]

[profile.dev.package."*"]
opt-level = 1

# [profile.release]
# debug = true
